@@ -2,13 +2,13 @@
 ### BEGIN INIT INFO
 # Provides: shibd
 # Required-Start: $local_fs $remote_fs $network
-# Required-Stop: $local_fs $remote_fs $network
+# Required-Stop: $local_fs $remote_fs
 # Default-Start: 2 3 4 5
-# Default-Stop: 0 1 6
+# Default-Stop:
 # Short-Description: Shibboleth 2 Service Provider Daemon
 # Description: Starts the separate daemon used by the Shibboleth
-# Apache module to manage sessions and to retrieve
-# attributes from Shibboleth Identity Providers.
+#       Apache module to manage sessions and to retrieve
+#       attributes from Shibboleth Identity Providers.
 ### END INIT INFO
 #
 # Written by Quanah Gibson-Mount <quanah@stanford.edu>
